Bug 206880 - KNetworkManager crashed in Knm::WirelessSecuritySetting::setSecurityType() connecting to a 802.1x secured ethernet
Summary: KNetworkManager crashed in Knm::WirelessSecuritySetting::setSecurityType() co...
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: knetworkmanager (other bugs)
Version First Reported In: 0.8
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-09 18:26 UTC by Jonathan Thomas
Modified: 2009-09-11 20:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Thomas 2009-09-09 18:26:24 UTC
Version:           0.8 svn 1017841 (using KDE 4.3.1)
OS:                Linux
Installed from:    Ubuntu Packages

Originally reported at https://launchpad.net/bugs/426692

The user reported a crash that occurred upon connecting to a ethernet connection with the 802.1x security method.

The backtrace is as follows:

Program received signal SIGSEGV, Segmentation fault.
0x00007fe112dfa80d in Knm::WirelessSecuritySetting::setSecurityType (this=0xfa0350, connection=<value optimized out>,
    iface=<value optimized out>, ap=<value optimized out>, parent=<value optimized out>)
    at /build/buildd/plasma-widget-networkmanagement-0.1~svn1017841/libs/ui/../internals/settings/802-11-wireless-security.h:44
44 mSecurityType = v;
(gdb) bt full
#0 0x00007fe112dfa80d in Knm::WirelessSecuritySetting::setSecurityType (this=0xfa0350, connection=<value optimized out>,
    iface=<value optimized out>, ap=<value optimized out>, parent=<value optimized out>)
    at /build/buildd/plasma-widget-networkmanagement-0.1~svn1017841/libs/ui/../internals/settings/802-11-wireless-security.h:44
No locals.
#1 WirelessSecuritySettingWidget (this=0xfa0350, connection=<value optimized out>, iface=<value optimized out>, ap=<value optimized out>,
    parent=<value optimized out>)
    at /build/buildd/plasma-widget-networkmanagement-0.1~svn1017841/libs/ui/security/wirelesssecuritysettingwidget.cpp:142
No locals.
#2 0x00007fe112e0f9f0 in ConnectionSecretsJob::doAskUser (this=0xebf630)
    at /build/buildd/plasma-widget-networkmanagement-0.1~svn1017841/libs/ui/connectionsecretsjob.cpp:133
        __PRETTY_FUNCTION__ = "void ConnectionSecretsJob::doAskUser()"
#3 0x00007fe112e10206 in ConnectionSecretsJob::doWork (this=0xebf630)
    at /build/buildd/plasma-widget-networkmanagement-0.1~svn1017841/libs/ui/connectionsecretsjob.cpp:82
        __PRETTY_FUNCTION__ = "void ConnectionSecretsJob::doWork()"
#4 0x00007fe112ddfe20 in ConnectionSecretsJob::qt_metacall (this=0xebf630, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>,
    _a=0x7fffc87bf0d0)
    at /build/buildd/plasma-widget-networkmanagement-0.1~svn1017841/obj-x86_64-linux-gnu/libs/ui/moc_connectionsecretsjob.cpp:71
No locals.
#5 0x00007fe115e99d2c in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
No symbol table info available.
#6 0x00007fe115e9ed6f in ?? () from /usr/lib/libQtCore.so.4
No symbol table info available.
#7 0x00007fe115e93cd3 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
No symbol table info available.
#8 0x00007fe116588efc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
No symbol table info available.
#9 0x00007fe1165901ce in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
No symbol table info available.
#10 0x00007fe117cd5db6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
No symbol table info available.
#11 0x00007fe115e84b7c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
No symbol table info available.
#12 0x00007fe115eaf7b2 in ?? () from /usr/lib/libQtCore.so.4
No symbol table info available.
#13 0x00007fe115ead1ad in ?? () from /usr/lib/libQtCore.so.4
No symbol table info available.
#14 0x00007fe111e07bee in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
No symbol table info available.
#15 0x00007fe111e0b5b8 in ?? () from /usr/lib/libglib-2.0.so.0
No symbol table info available.
#16 0x00007fe111e0b6e0 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
No symbol table info available.
#17 0x00007fe115ead0f6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
No symbol table info available.
#18 0x00007fe11661d3de in ?? () from /usr/lib/libQtGui.so.4
No symbol table info available.
#19 0x00007fe115e83482 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
No symbol table info available.
#20 0x00007fe115e83854 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
No symbol table info available.
#21 0x00007fe115e85a09 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
No symbol table info available.
#22 0x000000000040ce8f in main (argc=<value optimized out>, argv=<value optimized out>)
    at /build/buildd/plasma-widget-networkmanagement-0.1~svn1017841/monolithic/main.cpp:43
        about = {d = 0xd01a10}
        options = {d = 0xd165b0}
        app = {<> = {<No data fields>}, static staticMetaObject = {d = {superdata = 0x6250c0, stringdata = 0x41cd20 "Monolithic",
              data = 0x41d1e0, extradata = 0x0}}, d_ptr = 0xde4860}
        i = <value optimized out>
Comment 1 Will Stephenson 2009-09-11 20:49:46 UTC
SVN commit 1022429 by wstephens:

Fix crash when asking for new secrets for wired 802.1x authenticated connections.

BUG: 206880



 M  +6 -1      connectionsecretsjob.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1022429