Fix crash when asking for new secrets for wired 802.1x authenticated connections.

BUG: 206880