libs/ui/connectionsecretsjob.cpp
@@ -51,6 +51,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #include "wiredwidget.h"
 #include "security/wirelesssecuritysettingwidget.h"
 #include "security/securitywidget.h"
+#include "security/securitywired8021x.h"
 
 #include "knmserviceprefs.h"
 #include "connection.h"
@@ -110,7 +111,11 @@ void ConnectionSecretsJob::doAskUser()
     // popup a dialog showing the appropriate UI for the type of connection
     kDebug();
     if ( mSettingName == QLatin1String(NM_SETTING_802_1X_SETTING_NAME)) {
-        m_settingWidget = new WirelessSecuritySettingWidget(m_connection /*Need AP and iface here*/ ) ;
+        if (m_connection->type() == Knm::Connection::Wired) {
+            m_settingWidget = new SecurityWired8021x(m_connection);
+        } else if (m_connection->type() == Knm::Connection::Wireless) {
+            m_settingWidget = new WirelessSecuritySettingWidget(m_connection /*Need AP and iface here*/ ) ;
+        }
     } else if ( mSettingName == QLatin1String(NM_SETTING_CDMA_SETTING_NAME)) {
         m_settingWidget = new CdmaWidget(m_connection, 0);
     } else if ( mSettingName == QLatin1String(NM_SETTING_GSM_SETTING_NAME)) {
